# metro-route-finder

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Metro_Route_Finder_Project_Report_file.docx  README.md  render.yaml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
api/: package-lock.json  package.json  server.js
backend/: CMakeLists.txt
backend/include/: Admin.h  FileManager.h  Graph.h  MetroLine.h  RouteFinder.h  Station.h  std_filesystem.h
backend/src/: Admin.cpp  FileManager.cpp  Graph.cpp  MetroLine.cpp  RouteFinder.cpp  admin_cli.cpp  main.cpp
backend/tests/: test_admin_crud.cpp  test_persistence.cpp  test_routefinder.cpp
database/: history.json
database/backups/: connections_2026-07-15T12-09-32-469Z.json  connections_2026-07-19T05-46-12-644Z.json  stations_2026-07-15T12-09-32-469Z.json  stations_2026-07-15T12-29-20-515Z.json
docs/: Algorithm-Explanation.md  Architecture.md  Class-Diagram.md  DFD-Level-0.md  DFD-Level-1.md  DOCUMENTATION.md  Deployment-Diagram.md  ER-Diagram.md  Flowcharts.md  Installation-Guide.md  Metro Route Finder.docx  Performance-Analysis.md  Project-Report.md  Project-Summary.md  Sample-Inputs-and-Outputs.md  Submission-Checklist.md  TEST_REPORT.md  UML.md  Use-Case-Diagram.md
frontend/: .eslintrc.json  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: ErrorBoundary.jsx  InputField.jsx  MetricCard.jsx  MetroMap.jsx
tests/: api_tests.js
(+4 files in other folders)
